--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -344,8 +344,8 @@ section{
                     .react{
                         width: 60%;
                     }
-                    .node{
-                        width: 87%;
+                    .Java{
+                        width: 20%;
                     }
                     .python{
                         width: 70%;
